made some changes to the hope page and emails

--- a/project_ecommerce/templates/checkout/checkout.html
+++ b/project_ecommerce/templates/checkout/checkout.html
@@ -24,10 +24,10 @@
                 <p>Account Number:</p>
                 <p><strong>{{ admin_bank_account.account_number }}</strong></p>
             </div>
-            <div class="account-info">
+           <!-- <div class="account-info">
                 <p>Describtion:</p>
                 <p><strong>{{ description }}</strong></p>
-            </div>
+            </div> -->
             <div class="amount-info">
                 <p>shippingfee:</p>
                 <p><strong>{{shipping_fee.fee}}</strong></p>
@@ -44,7 +44,7 @@
             </div>
         </div>
         <p style="padding-top: 10px;"><b>Note:</b> only click on the paid button if
-            and only if you have sucessfully maid the payment. misuse of this button
+            and only if you have sucessfully made the payment. misuse of this button
             will lead to deactivation of your account
         </p>
             <!-- to ensure the link is only clickable once-->
