--- a/project_ecommerce/templates/main.html
+++ b/project_ecommerce/templates/main.html
@@ -160,7 +160,7 @@
                 </a>
                 <p class="footer-text">
                     "GT Concepts: Your One-Stop E-commerce Destination
-                    Discover the latest trends and high-quality products at GT Concept.
+                    Discover the latest trends and high-quality products at GT Concepts.
                     We bring you an exquisite shopping experience."
                 </p>
                 <ul class="social-list">
@@ -191,7 +191,7 @@
     <div class="footer-bottom">
         <div class="container">
             <p class="copyright">
-                &copy; 2022 <a href="#">Gtconcept</a>. All Rights Reserved
+                &copy; 2022 <a href="#">Gt Concepts</a>. All Rights Reserved
             </p>
             <ul class="footer-bottom-list">
                 <li>
