--- a/project_ecommerce/templates/registration/login.html
+++ b/project_ecommerce/templates/registration/login.html
@@ -21,7 +21,7 @@
         </div>
     </form>
     <div class="login-link">
-        Dont have an account? <a href="{% url 'signup' %}">sing up</a>
+        Dont have an account? <a href="{% url 'signup' %}">sign up</a>
         forgotten pssword? <a href="{% url 'reset_password/password_reset' %}">remind me</a>
     </div>
 </div>
